# genslm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  Makefile  README.md  commands.md  mytoken.txt  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  question-issue-template.md
data/architectures/gpt2/: gpt2_15,422,700,160.json  gpt2_2,482,632,000.json  gpt2_25,491,496,320.json  gpt2_25,779,712.json
data/architectures/neox/: neox_244,464,576.json  neox_7,867,596,800.json
data/architectures/reformer/: reformer_2,551,869,509.json
data_processing/: example_genomes.fasta  extract_nucleocapsid.py  h5_concat.pbs  h5_concat_orf_test.pbs  h5_concat_orf_train.pbs  h5_concat_orf_val.pbs  h5_concat_test.pbs  h5_concat_test_aa.pbs  h5_concat_train.pbs  h5_concat_train_aa.pbs  h5_concat_val.pbs  h5_concat_val_aa.pbs  h5_preprocess_multinode.pbs  h5_preprocess_multinode_aa.pbs  nucleocapsid_gene.fasta  process_single_family_file.py  run-polaris.sh  run_mmseqs.py  single_node_h5_preprocess.pbs  spike_gene.fasta
docs/: COMMANDS.md  INSTALL.md
examples/: embedding.ipynb  generate.ipynb
examples/folding/: README.md  lambda_fold.py
examples/long-sequences/: README.md  install.sh  pretrain_gpt.py
examples/long-sequences/ALCF/: args.sh  launch.sh  model.sh  setup.sh  submit-pbs.sh  submit.sh  train-gpt3.sh
examples/mdh_gpt2/: README.md
examples/mdh_gpt2/likely-wood-857/: mdh_1024_gpt2_generated_sequence_clusters.ipynb
examples/mdh_gpt2/likely-wood-857/generated_seqs/: likely-wood-857-mdh_gpt2_1024.fasta
examples/perlmutter/: README.md  config.yaml  reformer_param_sizes.csv  sbatch_perlmutter.py  submit.sh
examples/perlmutter/notebook/: cluster_sequence_samples.pkl  likely-wood-857-sampled_from_clusters_95_seqs.fasta  likely-wood-857-sampled_from_clusters_95_seqs_translated.fasta  likely-wood-857-sampled_from_clusters_97_seqs.fasta  mdh_1024_gpt2_generated_sequence_clusters.ipynb  perf_scaling.ipynb
examples/perlmutter/notebook/likely-wood-857-sampled_from_clusters_95_seqs_translated/: MDHSyntheticSequence-LikelyWood857_100_index168_translated.fasta  MDHSyntheticSequence-LikelyWood857_101_index169_translated.fasta  MDHSyntheticSequence-LikelyWood857_102_index171_translated.fasta  MDHSyntheticSequence-LikelyWood857_106_index175_translated.fasta  MDHSyntheticSequence-LikelyWood857_109_index178_translated.fasta  MDHSyntheticSequence-LikelyWood857_111_translated.fasta  MDHSyntheticSequence-LikelyWood857_118_index46_translated.fasta  MDHSyntheticSequence-LikelyWood857_118_translated.fasta  MDHSyntheticSequence-LikelyWood857_125_index54_translated.fasta  MDHSyntheticSequence-LikelyWood857_127_translated.fasta  MDHSyntheticSequence-LikelyWood857_136_index350_translated.fasta  MDHSyntheticSequence-LikelyWood857_149_index365_translated.fasta  MDHSyntheticSequence-LikelyWood857_154_index371_translated.fasta  (+169 more)
examples/perlmutter/study-perf/: README.md  generate_configs.py  perf_scaling.ipynb  selene_output.txt
examples/study-perf/: README.md  perf_scaling.ipynb
examples/study-perf/results/: reformer_results.csv  selene_output.txt
examples/training/covid_models/: 250M_finetune_first_year.yaml  25M_finetune_first_year.yaml
examples/training/foundation_models/: 250M_foundation.yaml  25B_foundation.yaml  25M_foundation.yaml  2B_foundation.yaml
gene_transformer/: blast.py  config.py  dataset.py  generate.py  model.py  utilities.py  utils.py
gene_transformer/cmdline/: copy_h5.py  deepspeed_to_pt.py  embeddings.py  fasta_to_h5.py  gather_embeddings.py  generate.py  generate_using_env_variables.py  h5_to_fasta.py  inference_outputs.py  process_single_family_file.py  remove_neox_attention_bias.py  single_fasta_to_h5.py  write_fasta_files.py
gene_transformer/data/: torch_dataset.py
gene_transformer/data/codons/: data_format.py  dataset.py
gene_transformer/data/nucleotide/: data_format.py  dataset.py
gene_transformer/data/protein/: data_format.py  dataset.py
gene_transformer/hpc/: submit.py
gene_transformer/hpc/templates/: affinity.sh  perlmutter.j2  polaris.j2  polaris_multinode_generate.j2  run-polaris-generation.sh  run-polaris.sh  set_affinity_gpu_polaris.sh
gene_transformer/preprocess/: run_mmseqs.py
gene_transformer/tokenizer_files/: dna_wordlevel_100vocab.json  genome_level_tokenizer.json
genslm/: __init__.py  blast.py  config.py  dataset.py  inference.py  model.py  seq_utils.py  utils.py
genslm/architectures/gpt2/: gpt2_1,523,954,400.json  gpt2_15,422,700,160.json  gpt2_2,482,632,000.json  gpt2_20,142,525,440.json  gpt2_25,491,496,320.json  gpt2_25,779,712.json  gpt2_256,305,024.json
genslm/architectures/neox/: neox_15,056,728,576.json  neox_2,533,931,008.json  neox_244,464,576_10240_pos_embed.json  neox_25,076,188,032.json  neox_25,290,752.json  neox_25,290,752_10240_pos_embed.json  neox_7,867,596,800.json
genslm/architectures/reformer/: reformer_2,551,869,509.json  reformer_20,405,579,845.json  reformer_24,313,413.json  reformer_243,038,277.json
genslm/cmdline/: bulk_inference.py  deepspeed_to_pt.py  fasta_to_h5.py  gather_embeddings.py  gather_inference_h5.py  generate.py  generate_using_env_variables.py  h5_to_fasta.py  inference.py  inference_outputs.py  megatron_preprocess.py  process_single_family_file.py  remove_neox_attention_bias.py  run_inference.py  single_fasta_to_h5.py  write_fasta_files.py
genslm/hpc/: submit.py
genslm/hpc/templates/: affinity.sh  perlmutter.j2  polaris.j2  polaris_multinode_generate.j2
genslm/tokenizer_files/: codon_wordlevel_100vocab.json  codon_wordlevel_69vocab.json  codon_wordlevel_71vocab.json  dna_wordlevel_100vocab.json  protein_alphabet_wordlevel.json  protein_wordlevel_26vocab.json  protein_wordlevel_27vocab.json  protein_wordlevel_28vocab.json  protein_wordlevel_29vocab.json
requirements/: Dockerfile  build.def  dev.txt  requirements.txt
tests/: test_dataset.py  test_genslm.py
utils/: PGF_00000002.ffn  log_parser.py  substitution_matrix.py
(+142 files in other folders)
