[metadata]
name = genslm
version = attr: genslm.__version__
description = GenSLMs: Genome-scale language models reveal SARS-CoV-2 evolutionary dynamics.
long_description = file: README.md, LICENSE.md
long_description_content_type=text/markdown

url = https://github.com/ramanathanlab/genslm
author = Maxim Zvyagin, Alexander Brace, Kyle Hippe, Heng Ma, Arvind Ramanathan
author_email = ramanathana@anl.gov
license = MIT License
keywords = machine-learning, artificial-inteligence, large-language-model, genome-scale, genomics, SARS-CoV-2, COVID-19, HPC
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
include_package_data = True
packages = find:
install_requires = 
    pytorch-lightning==2.4.0
    wandb
    pydantic==1.10.2
    biopython==1.79
    pandas
    natsort
    Jinja2
    transformers @ git+https://github.com/maxzvyagin/transformers
    h5py==3.11.0
    lightning-transformers==0.2.1
python_requires = >=3.6,!=3.12.*

[options.package_data]
genslm = *.json, *.sh, *.j2

[options.packages.find]
exclude =
    tests
    docs
    env

[flake8] 
exclude = .git
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231
max-complexity = 14

[tool:pytest]
# https://docs.pytest.org/en/stable/customize.html
addopts = -x
junit_family=xunit1
filterwarnings =
    ignore::DeprecationWarning

[mypy]
show_error_codes = True
check_untyped_defs = True
follow_imports = normal
strict_optional = True
plugins = pydantic.mypy
strict = True
disallow_untyped_defs = True

[mypy-transformers.*]
# https://github.com/huggingface/transformers/issues/13390#issuecomment-934830946
ignore_missing_imports = True
follow_imports = skip

[mypy-tokenizers.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-deepspeed.*]
ignore_missing_imports = True

